--- a/Online-Messaging-App/src/app/home/chatbox/chatbox.component.scss
+++ b/Online-Messaging-App/src/app/home/chatbox/chatbox.component.scss
@@ -148,15 +148,15 @@ mat-label {
 
 app-channel-user-list {
     height: 100%;
-    overflow: auto;
-    width: 20%;
-    float: left;
+    overflow: hidden;
+    min-width: 3in;
+    float: right;
+    flex-shrink: 0;
 }
 
 .container {
     height: 100%;
     float: left;
-    width: 80%;
 }
 
 #messageForm {
